--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
         <jsqlparser-version>0.9.4</jsqlparser-version>
         <jstl-version>1.2</jstl-version>
         <mysql-connector-version>8.0.28</mysql-connector-version>
+        <commons-fileupload-version>1.3.3</commons-fileupload-version>
+        <commons-io-version>2.4</commons-io-version>
     </properties>
 
     <dependencies>
@@ -156,6 +158,17 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-version}</version>
+        </dependency>
+        <!--文件上传依赖-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io-version}</version>
         </dependency>
     </dependencies>
 
