--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <mysql-connector-version>8.0.28</mysql-connector-version>
         <commons-fileupload-version>1.3.3</commons-fileupload-version>
         <commons-io-version>2.4</commons-io-version>
+        <jackson-version>2.9.8</jackson-version>
     </properties>
 
     <dependencies>
@@ -169,6 +170,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
         </dependency>
     </dependencies>
 
