--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,7 +17,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:SpringMvc.xml</param-value>
+            <param-value>classpath*:SpringMvc.xml</param-value>
         </init-param>
         <!-- 在tomcat启动的时候就加载这个servlet -->
         <load-on-startup>1</load-on-startup>
