--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,16 @@
         <commons-fileupload-version>1.3.3</commons-fileupload-version>
         <commons-io-version>2.4</commons-io-version>
         <jackson-version>2.9.8</jackson-version>
+        <minio-version>8.2.1</minio-version>
     </properties>
 
     <dependencies>
+        <!--minio-->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio-version}</version>
+        </dependency>
         <!--mybatis-plus依赖-->
         <dependency>
             <groupId>com.baomidou</groupId>
